Fix compilation errors in GlobalExceptionHandler, entities, and observer pattern